kubernetes/namespace.yaml
# Create a separate Kubernetes namespace for the application
apiVersion: v1
kind: Namespace
metadata:
  name: aws-eks-platform
