kubernetes/ingress.yaml
# Route external HTTP traffic toward the application Service
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: aws-eks-platform-ingress
  namespace: aws-eks-platform
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /health

spec:
  ingressClassName: alb

  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: aws-eks-platform-service
                port:
                  number: 80
